<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/keyline_medium">

  <TextView
    android:id="@+id/title"
    style="@style/TextAppearance.AppCompat.Title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/credit_card_payment_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/subtitle"
    style="@style/TextAppearance.AppCompat.Subhead"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/credit_card_payment_subtitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title" />

  <EditText
    android:id="@+id/cardNumberInput"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_xsmall"
    android:hint="@string/credit_card_number_hint"
    android:importantForAutofill="no"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/subtitle" />

  <Button
    android:id="@+id/submitButton"
    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_small"
    android:text="@string/submit"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardNumberInput" />

  <Button
    android:id="@+id/cancelButton"
    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_small"
    android:layout_marginEnd="@dimen/keyline_small"
    android:text="@string/cancel"
    app:layout_constraintEnd_toStartOf="@+id/submitButton"
    app:layout_constraintTop_toBottomOf="@+id/cardNumberInput" />

</androidx.constraintlayout.widget.ConstraintLayout>